force-app/main/default/objects/Configure_Trigger__c/fields/Enable_Contact__c.field-meta.xml
<CustomField>
    <fullName>Enable_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Contact</label>
    <type>Checkbox</type>
</CustomField>