force-app/main/default/objects/Configure_Trigger__c/fields/Enable_Custom_Report__c.field-meta.xml
<CustomField>
    <fullName>Enable_Custom_Report__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Custom Report</label>
    <type>Checkbox</type>
</CustomField>