force-app/main/default/objects/Configure_Trigger__c/fields/Enable_Employee_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Enable_Employee_Reimbursement__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Employee Reimbursement</label>
    <type>Checkbox</type>
</CustomField>